@@ -10,3 +10,4 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+install: cpanm --quiet --installdeps --notest --with-develop .
