@@ -1,8 +1,12 @@
 requires 'perl' => '5.010001';
 requires 'Carp';
 requires 'Future' => '0.33';
-requires 'Mojolicious' => '5.0';
+requires 'Mojolicious' => '7.54';
 requires 'parent';
+requires 'Role::Tiny' => '2.000002';
 requires 'Scalar::Util';
 test_requires 'Test::Identity';
-test_requires 'Test::More' => '0.88';
+test_requires 'Test::More' => '0.94';
+test_requires 'Test::Needs';
+author_requires 'IO::Async::Loop' => '0.56';
+author_requires 'IO::Async::Loop::Mojo' => '0.04';
