@@ -9,3 +9,5 @@ copyright_year   = 2015
 installer = ModuleBuildTiny::Fallback
 pod_tests = 1
 irc = irc://irc.perl.org/#mojo
+Test::ReportPrereqs.include[0] = IO::Async::Loop
+Test::ReportPrereqs.include[1] = IO::Async::Loop::Mojo
