@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Added a new module Future::Role::Promisify, which is composed by default by
+    Future::Mojo to provide a promisify method that chains a Mojo::Promise.
 
 0.004     2017-11-03 12:20:54 EDT
   - Added new_timeout constructor for a future that fails after a delay
